# glass-box

./: .gitignore  README.md  pyproject.toml
evals/: __init__.py  cases.py  run_evals.py
src/glassbox/: __init__.py  __main__.py  agent.py  cli.py  llm.py  replay.py
src/glassbox/tools/: __init__.py  base.py  calculator.py  files.py  sql.py
src/glassbox/tracing/: __init__.py  diff.py  schema.py  tracer.py  viewer.py
