[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox"
version = "0.1.0"
description = "A from-scratch, fully-local LLM agent focused on traceability."
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
